// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI kit List Item can pass names of class to apply style 1`] = `
<div
  className="a b"
  role="list"
>
  <span
    className="foo"
  >
    foo
  </span>
</div>
`;

exports[`UI kit List Item can pass props directly 1`] = `
<div
  className="a b"
  id="foo"
  onClick={[Function]}
  role="list"
>
  <span
    className="foo"
  >
    foo
  </span>
</div>
`;

exports[`UI kit List Item can render with other container 1`] = `
<span
  role="list"
>
  test
</span>
`;

exports[`UI kit List Item render with empty nodes 1`] = `
<div
  role="list"
/>
`;

exports[`UI kit List Item render with single nodes 1`] = `
<div
  role="list"
>
  test
</div>
`;

exports[`UI kit List Item render with single nodes 2`] = `
<div
  role="list"
>
  <span
    className="foo"
  >
    foo
  </span>
  <a
    href=""
  >
    link
  </a>
</div>
`;
